--- a/app/src/main/res/layout/repo_overview_fragment.xml
+++ b/app/src/main/res/layout/repo_overview_fragment.xml
@@ -26,7 +26,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="48dp"
         android:id="@+id/repoDetailNumbersLayout"
         android:layout_margin="8dp"
         android:orientation="horizontal"
@@ -69,7 +69,7 @@
           android:layout_height="48dp"
           android:layout_weight="1"
           android:id="@+id/repoDetailTagsCount"
-          android:drawableLeft="@drawable/ic_file_directory"
+          android:drawableLeft="@drawable/ic_tag"
           tools:text="@string/repo_detail_tags"
           style="@style/repo_detail_button"
           android:textAllCaps="false"
