--- a/app/src/main/res/layout/draw_item_single_line_avatar_with_text.xml
+++ b/app/src/main/res/layout/draw_item_single_line_avatar_with_text.xml
@@ -21,12 +21,13 @@
   <TextView
       android:id="@+id/text"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="48dp"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_centerVertical="true"
       android:layout_marginLeft="56dp"
       android:layout_marginStart="56dp"
+      android:gravity="center_vertical"
       tools:text="Single-line item"
       android:textColor="?android:textColorPrimary"
       android:textSize="16sp"
