--- a/app/src/main/res/layout/dialog_release_details.xml
+++ b/app/src/main/res/layout/dialog_release_details.xml
@@ -2,9 +2,9 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
   <LinearLayout
@@ -80,6 +80,19 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="96dp"
+        >
+
+      <android.support.v7.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@id/recycler"
+          />
+
+    </LinearLayout>
+
+    <LinearLayout
         style="@style/repo_overview_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -116,7 +129,6 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone"
-      tools:visibility="visible"
       android:background="@color/white"
       >
 
