--- a/app/src/main/res/drawable/countorn.xml
+++ b/app/src/main/res/drawable/countorn.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle"
     >
 
-  <solid android:color="@android:color/transparent"/>
+  <solid android:color="@color/md_grey_100"/>
   <stroke
       android:color="@color/gray_github_medium"
       android:width="1dp"
