--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -1,65 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:orientation="vertical"
     >
-  <View
-      android:layout_width="match_parent"
-      android:layout_height="200dp"
-      android:background="?colorPrimary"
-      />
 
-  <RelativeLayout
+  <android.support.design.widget.AppBarLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:layout_alignParentTop="true"
+      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+      android:id="@+id/appBarLayout"
       >
-
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:id="@+id/appBarLayout"
-        android:elevation="0dp"
-        app:elevation="0dp"
-        >
-      <android.support.v7.widget.Toolbar
-          android:id="@id/toolbar"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:background="?colorPrimary"
-          android:minHeight="?actionBarSize"
-          app:contentInsetStart="@dimen/second_keyline"
-          android:layout_gravity="top"
-          />
-      <android.support.design.widget.TabLayout
-          android:id="@+id/tabLayout"
-          android:layout_width="match_parent"
-          android:layout_height="?actionBarSize"
-          android:layout_marginTop="16dp"
-          android:layout_marginLeft="@dimen/responsive_ly_margin_horizontal"
-          android:layout_marginRight="@dimen/responsive_ly_margin_horizontal"
-          />
-    </android.support.design.widget.AppBarLayout>
-
-    <FrameLayout
+        android:background="?colorPrimary"
+        android:minHeight="?actionBarSize"
+        app:contentInsetStart="@dimen/second_keyline"
+        android:layout_gravity="top"
+        />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/big_card_bg"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/responsive_ly_margin_horizontal"
-        android:layout_marginRight="@dimen/responsive_ly_margin_horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/appBarLayout"
-        >
-      <FrameLayout
-          android:id="@+id/content"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          />
-    </FrameLayout>
+        android:layout_height="?actionBarSize"
+        />
+  </android.support.design.widget.AppBarLayout>
 
-  </RelativeLayout>
-</FrameLayout>
+  <FrameLayout
+      android:id="@+id/content"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_below="@+id/appBarLayout"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior"
+      />
+
+</android.support.design.widget.CoordinatorLayout>
