--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-      android:drawable="@color/md_indigo_400"/>
+      android:drawable="@color/md_grey_100"/>
 
   <item>
     <bitmap
