--- a/app/src/main/res/layout/repo_overview_fragment.xml
+++ b/app/src/main/res/layout/repo_overview_fragment.xml
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             android:id="@+id/repoDetailNumbersStar"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_star_vector"
+            android:drawableLeft="@drawable/ic_repo_star"
             tools:text="@string/repo_detail_no_starred"
             android:textAllCaps="false"
             style="@style/repo_detail_button"
@@ -56,7 +56,7 @@
             android:layout_height="match_parent"
             android:id="@+id/repoDetailNumbersWatch"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_eye"
+            android:drawableLeft="@drawable/ic_repo_eye"
             tools:text="@string/repo_detail_no_watched"
             android:textAllCaps="false"
             style="@style/repo_detail_button"
@@ -76,7 +76,7 @@
             android:layout_height="48dp"
             android:layout_weight="1"
             android:id="@+id/repoDetailTagsCount"
-            android:drawableLeft="@drawable/ic_tag"
+            android:drawableLeft="@drawable/ic_repo_tag"
             tools:text="@string/repo_detail_tags"
             style="@style/repo_detail_button"
             android:textAllCaps="false"
@@ -86,7 +86,7 @@
             android:layout_height="48dp"
             android:layout_weight="1"
             android:id="@+id/repoDetailLicense"
-            android:drawableLeft="@drawable/ic_law"
+            android:drawableLeft="@drawable/ic_repo_law"
             tools:text="MIT"
             style="@style/repo_detail_button"
             />
@@ -182,7 +182,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/repoDefaultBranchCodeButton"
-            android:drawableLeft="@drawable/ic_file_directory"
+            android:drawableLeft="@drawable/ic_repo_file_directory"
             android:text="View code"
             style="@style/repo_detail_button"
             />
@@ -191,7 +191,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_git_commit"
+            android:drawableLeft="@drawable/ic_repo_git_commit"
             android:text="Commits"
             android:id="@+id/repoDefaultBranchCommits"
             style="@style/repo_detail_button"
