--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,6 +39,7 @@
     <item name="gitskarios_title">@color/primary_dark</item>
     <item name="gitskarios_webview">@android:color/transparent</item>
     <item name="gitskarios_card_background">@color/white</item>
+    <item name="theme_rounded_grey">@drawable/rounded_grey_light</item>
 
     <item name="diff_addition_text_color">@color/black</item>
     <item name="diff_deletion_text_color">@color/black</item>
@@ -55,6 +56,7 @@
     <item name="material_drawer_header_selection_text">
       @color/material_drawer_header_selection_text
     </item>
+    <item name="repoDetailBox">@style/repoDetailBox.light</item>
 
   </style>
 
@@ -78,6 +80,7 @@
     <item name="gitskarios_title">@color/accent</item>
     <item name="gitskarios_webview">@color/md_grey_900</item>
     <item name="gitskarios_card_background">@color/md_grey_800</item>
+    <item name="theme_rounded_grey">@drawable/rounded_grey_dark</item>
 
     <item name="diff_addition_text_color">@color/black</item>
     <item name="diff_deletion_text_color">@color/black</item>
@@ -95,6 +98,7 @@
     <item name="material_drawer_header_selection_text">
       @color/material_drawer_dark_header_selection_text
     </item>
+    <item name="repoDetailBox">@style/repoDetailBox.dark</item>
 
     <item name="md_dark_theme">true</item>
 
