--- a/app/src/main/res/layout-sw600dp/repo_overview_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/repo_overview_fragment.xml
@@ -28,11 +28,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        style="@style/repoDetailBox"
         android:layout_margin="8dp"
         android:id="@+id/repoDetailNumbersLayout"
-        android:divider="@drawable/divider_vertical"
-        android:showDividers="middle"
+        style="?repoDetailBox"
         >
 
         <Button
@@ -40,7 +38,7 @@
             android:layout_height="match_parent"
             android:id="@+id/repoDetailNumbersStar"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_star_vector"
+            android:drawableLeft="@drawable/ic_repo_star"
             tools:text="@string/repo_detail_no_starred"
             android:textAllCaps="false"
             style="@style/repo_detail_button"
@@ -51,7 +49,7 @@
             android:layout_height="match_parent"
             android:id="@+id/repoDetailNumbersWatch"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_eye"
+            android:drawableLeft="@drawable/ic_repo_eye"
             tools:text="@string/repo_detail_no_watched"
             android:textAllCaps="false"
             style="@style/repo_detail_button"
@@ -63,7 +61,7 @@
             android:layout_height="48dp"
             android:layout_weight="1"
             android:id="@+id/repoDetailTagsCount"
-            android:drawableLeft="@drawable/ic_tag"
+            android:drawableLeft="@drawable/ic_repo_tag"
             tools:text="@string/repo_detail_tags"
             style="@style/repo_detail_button"
             android:textAllCaps="false"
@@ -73,7 +71,7 @@
             android:layout_height="48dp"
             android:layout_weight="1"
             android:id="@+id/repoDetailLicense"
-            android:drawableLeft="@drawable/ic_law"
+            android:drawableLeft="@drawable/ic_repo_law"
             tools:text="MIT"
             style="@style/repo_detail_button"
             />
@@ -84,9 +82,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/repoDetailBranchesLayout"
         android:orientation="vertical"
-        android:divider="@drawable/divider_horizontal"
-        android:background="@drawable/countorn_light"
-        android:showDividers="middle"
+        style="?repoDetailBox"
         android:layout_margin="8dp"
         >
 
@@ -168,7 +164,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/repoDefaultBranchCodeButton"
-            android:drawableLeft="@drawable/ic_file_directory"
+            android:drawableLeft="@drawable/ic_repo_file_directory"
             android:text="View code"
             style="@style/repo_detail_button"
             />
@@ -177,7 +173,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_git_commit"
+            android:drawableLeft="@drawable/ic_repo_git_commit"
             android:text="Commits"
             android:id="@+id/repoDefaultBranchCommits"
             style="@style/repo_detail_button"
@@ -191,9 +187,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:divider="@drawable/divider_horizontal"
-        android:background="@drawable/countorn_light"
-        android:showDividers="middle"
+        style="?repoDetailBox"
         android:layout_margin="8dp"
         >
       <RelativeLayout
